--- a/StyleTemplate.css
+++ b/StyleTemplate.css
@@ -2,6 +2,7 @@
                 color:black;
                 font-size:20px;
                 text-decoration: none;
+                width: auto;
         }
 a:visited {
                 color: blueviolet
