--- a/StyleTemplate.css
+++ b/StyleTemplate.css
@@ -1,8 +1,9 @@
  a:link {
                 color:black;
-                font-size:20px;
+                font-size:35px;
                 text-decoration: none;
-                width: auto;         
+                width: auto; 
+                font-weight: bold;
         }
 a:visited {
                 color: blueviolet
