--- a/StyleTemplate.css
+++ b/StyleTemplate.css
@@ -9,7 +9,7 @@ a:visited {
                 color: fuchsia;
 }
 h1 {
-                color: fuchsia;
+                color: antiquewhite;
 }
 
 p {
